deploy/prow/prow_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prow
  namespace: prow
  annotations:
    cert.gardener.cloud/issuer: ci-issuer
    cert.gardener.cloud/purpose: managed
    dns.gardener.cloud/class: garden
    dns.gardener.cloud/dnsnames: prow.gardener.cloud
spec:
  gatewayClassName: prow
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: prow.gardener.cloud
    tls:
      mode: Terminate
      certificateRefs:
      - name: prow-tls
        namespace: prow
    allowedRoutes:
      namespaces:
        from: Same
